# rust-shlex

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
fuzz/: Cargo.toml
fuzz/fuzz_quote_python/: Cargo.toml
fuzz/fuzz_quote_python/src/: fuzz.rs
fuzz/fuzz_quote_real_shell/: Cargo.toml  Dockerfile  each-shell.sh
fuzz/fuzz_quote_real_shell/basic-corpus/: long-random  short-random
fuzz/fuzz_quote_real_shell/src/: fuzz.rs
fuzz/fuzz_quote_wordexp/: Cargo.toml  build.rs
fuzz/fuzz_quote_wordexp/src/: fuzz.rs  wordexp_wrapper.c
fuzz/fuzz_targets/: fuzz_next.rs  fuzz_quote.rs
src/: bytes.rs  lib.rs  quoting_warning.md
