[package]
name = "shlex-fuzz"
version = "0.0.0"
authors = ["see main rust-shlex Cargo.toml for authors"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.shlex]
path = ".."

[workspace]
members = [
    ".",
    "fuzz_quote_real_shell",
    "fuzz_quote_python",
    "fuzz_quote_wordexp",
]

[[bin]]
name = "fuzz_next"
path = "fuzz_targets/fuzz_next.rs"
test = false
doc = false

[[bin]]
name = "fuzz_quote"
path = "fuzz_targets/fuzz_quote.rs"
test = false
doc = false
