[package]
name = "fuzz_quote_real_shell"
version = "0.0.0"
authors = ["see main rust-shlex Cargo.toml for authors"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.4"
bstr = "1.8.0"
nu-pretty-hex = "0.87.1"

[dependencies.shlex]
path = "../.."

[[bin]]
name = "fuzz_quote_real_shell"
path = "src/fuzz.rs"

