[package]
name = "fuzz_quote_wordexp"
version = "0.0.0"
authors = ["see main rust-shlex Cargo.toml for authors"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nu-pretty-hex = "0.87.1"

[dependencies.shlex]
path = "../.."

[build-dependencies]
cc = "1.0"

[[bin]]
name = "fuzz_quote_wordexp"
path = "src/fuzz.rs"
test = false
doc = false

